--- a/zookeeper/templates/service.yaml
+++ b/zookeeper/templates/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: zookeeper
-  namespace: smo
+  namespace: kafka
 spec:
   selector:
     app: zookeeper
