--- a/kafka/templates/configmap.yaml
+++ b/kafka/templates/configmap.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: kafka-config
-  namespace: kafka
+  namespace: opa
 data:
   strimzi.properties: |
     #  ============LICENSE_START===============================================
